[skip ci]
Figured out what getInputFiles returns.

Next steps: process based on input files